--- a/sx_data.html
+++ b/sx_data.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>大数据平台</title>
     <link rel="stylesheet" href="css/layui.css">
-    <link rel="stylesheet" href="css/data.css">
+    <link rel="stylesheet" href="css/sx_data.css">
 </head>
 <body>
 <div class="container">
@@ -85,15 +85,35 @@
         <!--办件动态-->
         <div class="workTrends">
             <h1 class="topic"><img src="sxImags/liststyle.png" class="listStyle"/><img src="sxImags/topic-03.png"/></h1>
-            <table class="trends">
-                <tr><td> </td><td>申办主体</td><td>受理部门</td><td>受理事项</td><td>申报日期</td></tr>
-                <tr><td>1</td><td>张云秀</td><td>省教育厅</td><td>本村人员户籍迁移证明</td><td>2018-03-01</td></tr>
-                <tr><td>2</td><td>李泽林</td><td>省教育厅</td><td>本村人员户籍迁移证明</td><td>2018-03-01</td></tr>
-                <tr><td>3</td><td>王庆群</td><td>省教育厅</td><td>本村人员户籍迁移证明</td><td>2018-03-01</td></tr>
-                <tr><td>4</td><td>张云秀</td><td>省教育厅</td><td>本村人员户籍迁移证明</td><td>2018-03-01</td></tr>
-                <tr><td>5</td><td>李泽林</td><td>省教育厅</td><td>本村人员户籍迁移证明</td><td>2018-03-01</td></tr>
-                <tr><td>6</td><td>王庆群</td><td>省教育厅</td><td>本村人员户籍迁移证明</td><td>2018-03-01</td></tr>
-            </table>
+            <!--   <table class="trends">
+                   <tr><td ></td><td>申办主体</td><td>受理部门</td><td>受理事项</td><td>申报日期</td></tr>
+                   <tr><td>1</td><td>张云秀</td><td>省教育厅</td><td>本村人员户籍迁移证明</td><td>2018-03-01</td></tr>
+                   <tr><td>2</td><td>李泽林</td><td>省教育厅</td><td>本村人员户籍迁移证明</td><td>2018-03-01</td></tr>
+                   <tr><td>3</td><td>王庆群</td><td>省教育厅</td><td>本村人员户籍迁移证明</td><td>2018-03-01</td></tr>
+                   <tr><td>4</td><td>张云秀</td><td>省教育厅</td><td>本村人员户籍迁移证明</td><td>2018-03-01</td></tr>
+                   <tr><td>5</td><td>李泽林</td><td>省教育厅</td><td>本村人员户籍迁移证明</td><td>2018-03-01</td></tr>
+                   <tr><td>6</td><td>王庆群</td><td>省教育厅</td><td>本村人员户籍迁移证明</td><td>2018-03-01</td></tr>
+                  &lt;!&ndash; <tr><td>7</td><td>王庆群</td><td>省教育厅</td><td>本村人员户籍迁移证明</td><td>2018-03-01</td></tr>
+                   <tr><td>8</td><td>王庆群</td><td>省教育厅</td><td>本村人员户籍迁移证明</td><td>2018-03-01</td></tr>
+                   <tr><td>9</td><td>王庆群</td><td>省教育厅</td><td>本村人员户籍迁移证明</td><td>2018-03-01</td></tr>&ndash;&gt;
+               </table>-->
+            <div class="trends">
+                <dl>
+                    <dd></dd><dd>申办主体</dd><dd>受理部门</dd><dd>受理事项</dd><dd>申报日期</dd>
+                </dl>
+                <div class="marquee">
+                    <ul>
+                        <li><span>1</span><span>张云秀</span><span>省教育厅</span><span>本村人员户籍迁移证明</span><span>2018-03-01</span></li>
+                        <li><span>2</span><span>李泽林</span><span>省教育厅</span><span>本村人员户籍迁移证明</span><span>2018-03-01</span></li>
+                        <li><span>3</span><span>张云秀</span><span>省教育厅</span><span>本村人员户籍迁移证明</span><span>2018-03-01</span></li>
+                        <li><span>4</span><span>王庆群</span><span>省教育厅</span><span>本村人员户籍迁移证明</span><span>2018-03-01</span></li>
+                        <li><span>5</span><span>李泽林</span><span>省教育厅</span><span>本村人员户籍迁移证明</span><span>2018-03-01</span></li>
+                        <li><span>6</span><span>王庆群</span><span>省教育厅</span><span>本村人员户籍迁移证明</span><span>2018-03-01</span></li>
+                        <li><span>7</span><span>王庆群</span><span>省教育厅</span><span>本村人员户籍迁移证明</span><span>2018-03-01</span></li>
+                        <li><span>8</span><span>王庆群</span><span>省教育厅</span><span>本村人员户籍迁移证明</span><span>2018-03-01</span></li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <!--进驻部门业务办理情况-->
         <div class="situation">
@@ -124,49 +144,49 @@
         <!--业务办理情况Top5-->
         <div class="workTop">
             <h1 class="topic"><img src="sxImags/liststyle.png" class="listStyle"/><img src="sxImags/topic-05.png"/></h1>
-        <ul>
-            <li class="topItem">
-                <span class="topText">TOP01</span>
-                <div class="layui-progress">
-                    <div class="layui-progress-bar graBg-purple" lay-percent="65%">
-                        <span class="layui-progress-text workName"> 建筑设计方案节能审查</span>
+            <ul>
+                <li class="topItem">
+                    <span class="topText">TOP01</span>
+                    <div class="layui-progress">
+                        <div class="layui-progress-bar graBg-purple" lay-percent="65%">
+                            <span class="layui-progress-text workName"> 建筑设计方案节能审查</span>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li class="topItem">
-                <span class="topText">TOP02</span>
-                <div class="layui-progress">
-                    <div class="layui-progress-bar graBg-purple" lay-percent="45%">
-                        <span class="layui-progress-text workName"> 建筑设计方案审定意见</span>
+                </li>
+                <li class="topItem">
+                    <span class="topText">TOP02</span>
+                    <div class="layui-progress">
+                        <div class="layui-progress-bar graBg-purple" lay-percent="45%">
+                            <span class="layui-progress-text workName"> 建筑设计方案审定意见</span>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li class="topItem">
-                <span class="topText">TOP03</span>
-                <div class="layui-progress">
-                    <div class="layui-progress-bar graBg-purple" lay-percent="35%">
-                        <span class="layui-progress-text workName">市政基础设施拆除开挖备案</span>
+                </li>
+                <li class="topItem">
+                    <span class="topText">TOP03</span>
+                    <div class="layui-progress">
+                        <div class="layui-progress-bar graBg-purple" lay-percent="35%">
+                            <span class="layui-progress-text workName">市政基础设施拆除开挖备案</span>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li class="topItem">
-                <span class="topText">TOP04</span>
-                <div class="layui-progress">
-                    <div class="layui-progress-bar graBg-purple" lay-percent="30%">
-                        <span class="layui-progress-text workName">建设工程施工图审查初审</span>
+                </li>
+                <li class="topItem">
+                    <span class="topText">TOP04</span>
+                    <div class="layui-progress">
+                        <div class="layui-progress-bar graBg-purple" lay-percent="30%">
+                            <span class="layui-progress-text workName">建设工程施工图审查初审</span>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li class="topItem">
-                <span class="topText">TOP05</span>
-                <div class="layui-progress">
-                    <div class="layui-progress-bar graBg-purple" lay-percent="25%">
-                        <span class="layui-progress-text workName">省外勘察设计单位进市承接单项工程资质核验单项</span>
+                </li>
+                <li class="topItem">
+                    <span class="topText">TOP05</span>
+                    <div class="layui-progress">
+                        <div class="layui-progress-bar graBg-purple" lay-percent="25%">
+                            <span class="layui-progress-text workName">省外勘察设计单位进市承接单项工程资质核验单项</span>
+                        </div>
                     </div>
-                </div>
-            </li>
-        </ul>
-    </div>
+                </li>
+            </ul>
+        </div>
         <!--业务平均办理时限统计-->
         <div class="limitTime">
             <h1 class="topic"><img src="sxImags/liststyle.png" class="listStyle"/><img src="sxImags/topic-06.png"/></h1>
@@ -193,8 +213,8 @@
         var map=echarts.init(document.getElementById('map'));         /*地图*/
         var i;
         /*进驻部门办理情况*/
-        var dataAxis=["区国税局","区教育局","区城管局","区商务局","区安监局","区财政局","区司法局"];
-        var data=[400000,670000,480000,780000,300000,360000,500000];
+        var dataAxis=["区国税局","区教育局","区城管局","区商务局","区安监局","区财政局","区司法局",'区金融办','区档案局','区卫计局','区民宗局','区轻信局'];
+        var data=[400000,670000,480000,780000,300000,360000,500000,450000,600000,420000,520000,630000];
         var caseOption={
             tooltip:{
                 trigger:'axis'
@@ -211,8 +231,8 @@
                 axisLabel:{
                     textStyle:{           /* x轴文字样式 */
                         color:'rgb(255,255,255,0.5)'
-                    }
-                    // rotate:30
+                    },
+                    rotate:30
                 },
                 axisLine:{                  /*x轴轴线样式*/
                     lineStyle:{color:'rgb(12,43,90,0.5)'}
@@ -465,10 +485,19 @@
         leftSpan.html(parseFloat(leftSpan.html()).toLocaleString());
         rightSpan.html(parseFloat(rightSpan.html()).toLocaleString());
         $.each(tds,function (i,item) {
-           $(this).text(parseFloat($(this).text()).toLocaleString());
+            $(this).text(parseFloat($(this).text()).toLocaleString());
         });
         handleNum.html(parseFloat(handleNum.html()).toLocaleString());
-    })
+        /*滚动办件动态*/
+        setInterval('autoScroll(".marquee")',3000);
+    });
+    function autoScroll(obj){
+        $(obj).find("ul").animate({
+            marginTop : "-42px"
+        },500,function(){
+            $(this).css({marginTop : "0px"}).find("li:first").appendTo(this);
+        })
+    }
 </script>
 </body>
 </html>
