--- a/tc_data3.4.html
+++ b/tc_data3.4.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <title>大数据平台</title>
     <link rel="stylesheet" href="css/layui.css">
-    <link rel="stylesheet" href="css/tc_data3.1.css">
+    <link rel="stylesheet" href="css/tc_data3.4.css">
 </head>
 <body>
 <div class="container">
     <!--上部-->
     <div class="top">
-        <div class="top_left"><span>354235</span></div><!--左上角数字-->
-        <div class="top_right"><span>354235</span></div><!--右上角数字-->
         <!--截止日期和成立时间等信息-->
         <div class="center_top">
             <div class="expiration"><span>统计截至日期：</span><span>2018-07-20</span></div>
@@ -103,19 +101,15 @@
         <!--各委办局的办件情况-->
         <div class="officeCase">
             <h1 class="topic"  style="height: 40px;line-height: 40px;margin-bottom: 10px;"><img src="imags/tc-topic.png" alt=""><span class="topic_name">窗口办件量TOP10</span></h1>
-            <div id="offCase" style="width: 630px;height: 147px;"></div><!--可能宽高需要一定比例-->
+            <div id="offCase" style="width: 630px;height: 147px;"></div>
         </div>
     </div>
     <!--右半部-->
     <div class="right">
         <!--业务办理情况汇总-->
         <div class="workHandle">
-            <h1 class="topic"><img src="imags/tc-topic_05.png"/></h1>
+            <h1 class="topic" style="margin-bottom: 10px;"><img src="imags/tc-topic_05.png"/></h1>
             <ul>
-                <li class="handle_main">
-                    <p class="handle_num textGreen">103</p>
-                    <p class="handle_info">累计办理</p>
-                </li>
                 <li class="handle_main">
                     <p class="handle_num textYellow">418</p>
                     <p class="handle_info">本月累计办理</p>
@@ -123,6 +117,10 @@
                 <li class="handle_main">
                     <p class="handle_num textBlue">4763</p>
                     <p class="handle_info">本年度累计办理</p>
+                </li>
+                <li class="handle_main">
+                    <p class="handle_num textGreen">103</p>
+                    <p class="handle_info">累计办理</p>
                 </li>
             </ul>
         </div>
@@ -201,7 +199,6 @@
     $(function () {
         var $topLeft=$(".top_left span");                 /*左上数字*/
         var $topRight=$(".top_right span");              /*右上数字*/
-        var $tds=$(".middle_main tr td:nth-child(2n)"); /*列表数字*/
         var $nums=$(".workHandle .handle_num");         /*业务办理情况*/
         var workName=document.getElementsByClassName('workName');
         var offCase=echarts.init(document.getElementById("offCase"));
@@ -330,17 +327,14 @@
         /*数字加逗号*/
         $topLeft.text(parseFloat($topLeft.text()).toLocaleString());
         $topRight.text(parseFloat($topRight.text()).toLocaleString());
-      /*  $tds.each(function () {
-            $(this).text(parseFloat($(this).text()).toLocaleString());
-        });*/
         $nums.each(function () {
             $(this).text(parseFloat($(this).text()).toLocaleString());
         });
         /*办件动态间歇滚动*/
-        setInterval("autoRoll('.marquee ul')",3000);
+        // setInterval("autoRoll('.marquee ul')",3000);
     });
     function autoRoll(obj) {
-        $(obj).animate({marginTop:"-23px"},500,function () {
+        $(obj).animate({marginTop:"-27px"},500,function () {
             $(this).css("margin-top",0).find("li:first").appendTo(this);
         });
     }
